--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>kin_</h1>
-		<a href="AvatarEyes.usdz" rel="ar">
+		<a href="AvatarLoop.usdz" rel="ar">
 			<img src="kin_preview.jpg" alt="Vorschau AR-Modell" width="300">
 		</a>
 		<p>Tippe auf das Bild, um das Modell in AR zu sehen. Safari wird empfohlen</p>
