--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<title>kin_ AR Viewer</title>
-	</head>
-	<body>
-		<h1>kin_</h1>
-		<a href="AvatarLoop.usdz" rel="ar">
-			<img src="kin_preview.jpg" alt="Vorschau AR-Modell" width="300">
-		</a>
-		<p>Tippe auf das Bild, um das Modell in AR zu sehen. Safari wird empfohlen</p>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<title>kin_ AR Viewer</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+			margin: 0;
+			background-color: #2c2c2c; 
+			color: #f4f4f9;
+		}
+
+		h1 {
+			font-size: 2.5em;
+			color: #ffa726; 
+			margin-bottom: 20px;
+			text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+		}
+
+		a img {
+			width: 300px;
+			border-radius: 15px;
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+			transition: transform 0.3s ease;
+		}
+
+		a img:hover {
+			transform: scale(1.05);
+		}
+
+		p {
+			font-size: 1.1em;
+			margin-top: 15px;
+		}
+	</style>
+</head>
+<body>
+	<h1>kin_</h1>
+	<a href="AvatarLoop.usdz" rel="ar">
+		<img src="kin_preview.jpg" alt="Vorschau AR-Modell">
+	</a>
+	<p>Tippe auf das Bild, um das Modell in AR zu sehen. Safari wird empfohlen</p>
+</body>
 </html>
